plugins {
    id 'java'
    id 'java-library'
    id 'jacoco'
}

group 'com.github.hmcts'
version 'DEV-SNAPSHOT'

repositories {
    mavenCentral()
    mavenLocal()
    maven { url 'https://jitpack.io' }
    jcenter()
}

task highLevelDataSetup(type: JavaExec) {
    main = "uk.gov.hmcts.reform.prl.HighLevelDataSetupApp"
    classpath += sourceSets.main.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}

dependencies {
    implementation group: 'com.github.hmcts', name: 'befta-fw', version: '8.10.1'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.17'
    implementation 'ch.qos.logback:logback-classic:1.5.18'

    testImplementation group: 'junit', name: 'junit', version: '4.13.2'
    testImplementation 'pl.pragmatists:JUnitParams:1.1.1'
    testImplementation 'com.github.hmcts:fortify-client:1.2.2:all'
    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.4'
}

task fortifyScan(type: JavaExec)  {
    javaLauncher = javaToochains.launcherFor {
        languageVersion = JavaLanguageVersion.of(8)
    }
    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}
